apps/production/harbor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-route
  namespace: harbor
spec:
  parentRefs:
  - name: kirintor-gateway
    namespace: kube-system
  hostnames:
  - "harbor.kirintor.benjaminmnoer.dk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: harbor-portal
      port: 80
      namespace: harbor
  - matches:
    - path:
        type: PathPrefix
        value: /api/
    - path:
        type: PathPrefix
        value: /c/
    - path:
        type: PathPrefix
        value: /v2/
    - path:
        type: PathPrefix
        value: /service/
    backendRefs:
    - name: harbor-core
      port: 80
      namespace: harbor
